--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,36 @@
-asgiref==3.8.1
-blinker==1.7.0
-certifi==2022.12.7
-charset-normalizer==3.1.0
-click==8.1.7
-colorama==0.4.6
-Django==5.1.1
-docutils==0.20.1
-ecdsa==0.19.0
-Flask==3.0.2
-greenlet==3.0.3
-idna==3.4
-itsdangerous==2.1.2
-Jinja2==3.1.3
-MarkupSafe==2.1.5
-Pillow==9.4.0
-pyasn1==0.6.0
-pygame==2.1.2
-Pygments==2.17.2
-pypiwin32==223
-pywin32==306
-requests==2.30.0
-rsa==4.9
-six==1.16.0
-SQLAlchemy==2.0.31
-sqlparse==0.5.1
-typing_extensions==4.12.2
+django-redis           == 5.4.0
+django-debug-toolbar    ==  5.0.1
+annotated-types==0.7.0
+cloudinary==1.42.0
+django-cloudinary-storage==0.3.0
+anyio            == 3.7.1
+asgiref         ==  3.8.1
+click            == 8.1.7
+colorama         == 0.4.6
+Django          ==  5.1.1
+django-tinymce  ==  4.1.0
+ecdsa            == 0.19.0
+fastapi         ==  0.104.1
+greenlet        ==  3.0.3
+h11            ==   0.14.0
+idna            ==  3.7
+Jinja2         ==   3.1.4
+MarkupSafe       == 2.1.5
+pillow          ==  11.0.0
+pip             ==  24.3
+pyasn1         ==   0.6.0
+pydantic         == 2.3.0
+pydantic_core     ==2.6.3
+python-jose      == 3.3.0
+python-multipart == 0.0.5
+rsa            ==   4.9
+six          ==     1.16.0
+sniffio      ==     1.3.1
+SQLAlchemy == 2.0.20
+sqlparse==0.5.0
+starlette==0.27.0
+typing_extensions==4.12.0
 tzdata==2024.1
-urllib3==2.0.2
-Werkzeug==3.0.1
+uvicorn==0.24.0.post1
+whitenoise    ==    6.8.2
+gunicorn      ==    23.0.0
